# android-r

./: .gitignore  ADB_INTEGRATION_COMPLETE.md  ANDROID_APP_FOUNDATION_COMPLETE.md  ARCHITECTURE.md  BUILD.md  BUILD_SCRIPTS_ADDED.md  BUILD_SUCCESS.md  CMakeLists.txt  COMPLETE_SESSION_SUMMARY.md  COMPLETION.md  DESKTOP_GUI_COMPLETE.md  DEVELOPMENT.md  FOR_LOOP_IMPLEMENTED.md  FUNCTION_REFERENCE.md  LANGUAGE_SPEC.md  PATH_TO_ONDEVICE_EXECUTION.md  PROGRESS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  ROADMAP.md  SESSION_SUMMARY.md  adb_integration_test.as  automation_multiarg_test.as  basic_test.as  basic_test_no_device.as  build.bat  build.sh  demo.as  device_info_test.as  multi_arg_test.as  out1.txt  rebuild.bat  rebuild.sh  single_arg_test.as  test.as  test_for_loop.as  test_func.as  test_increment.as  test_multiarg2.as  (+4 more)
android-agent/: build.gradle  build.sh  settings.gradle
android-agent/app/: build.gradle
android-agent/app/src/main/: AndroidManifest.xml
android-agent/app/src/main/java/com/androidscript/agent/: MainActivity.kt
android-agent/app/src/main/java/com/androidscript/agent/automation/: ElementFinder.kt  GestureController.kt  UIAutomator.kt
android-agent/app/src/main/java/com/androidscript/agent/download/: LinkExtractor.kt  SeriesDownloadManager.kt
android-agent/app/src/main/java/com/androidscript/agent/models/: ExecutionStatus.kt  Script.kt
android-agent/app/src/main/java/com/androidscript/agent/runtime/: AST.kt  Environment.kt  Interpreter.kt  Lexer.kt  NativeBridge.kt  Parser.kt  ScriptRunner.kt  Token.kt  Value.kt
android-agent/app/src/main/java/com/androidscript/agent/service/: AutomationAccessibilityService.kt
android-agent/app/src/main/java/com/androidscript/agent/ui/: ExecutionFragment.kt  ScriptListFragment.kt  SettingsFragment.kt
android-agent/app/src/main/java/com/androidscript/agent/utils/: AccessibilityUtils.kt
android-agent/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-agent/app/src/main/res/layout/: activity_main.xml  fragment_execution.xml  fragment_script_list.xml  fragment_settings.xml
android-agent/app/src/main/res/menu/: bottom_navigation_menu.xml
android-agent/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-agent/app/src/main/res/xml/: accessibility_service_config.xml
bridge/: CMakeLists.txt
bridge/include/: adb_client.h
bridge/src/: adb_client.cpp  device_manager.cpp  protocol.cpp  transport.cpp
common/protocol/: platform_interface.kt
core/: CMakeLists.txt
core/include/: ast.h  builtins.h  environment.h  interpreter.h  lexer.h  parser.h  token.h  value.h
core/src/: ast.cpp  builtins.cpp  environment.cpp  interpreter.cpp  lexer.cpp  memory.cpp  parser.cpp  value.cpp
desktop-gui/: README.md  build.gradle.kts  gradle.properties  run.sh  settings.gradle.kts
desktop-gui/src/main/kotlin/com/androidscript/gui/: Main.kt
desktop-gui/src/main/kotlin/com/androidscript/gui/api/: ApiClient.kt
desktop-gui/src/main/kotlin/com/androidscript/gui/model/: Models.kt
desktop-gui/src/main/kotlin/com/androidscript/gui/ui/: Components.kt  Tabs.kt
desktop-gui/src/main/kotlin/com/androidscript/gui/ui/theme/: Theme.kt
docs/: COMPLETION_SUMMARY.md  CROSS_PLATFORM_SETUP.md  FINAL_STATUS.md  MULTIPLATFORM_ARCHITECTURE.md  ROADMAP.md  SESSION_PROGRESS.md
examples/: app_management.as  comprehensive_demo.as  image_recognition_test.as  multi_device_test.as  simple_login.as  stress_test.as  working_demo.as
host-controller/: README.md  build.gradle.kts  settings.gradle.kts
host-controller/src/main/kotlin/com/androidscript/host/: Main.kt
host-controller/src/main/kotlin/com/androidscript/host/cli/: Commands.kt
host-controller/src/main/kotlin/com/androidscript/host/device/: AndroidDevice.kt  Device.kt  DeviceManager.kt  iOSDevice.kt
host-controller/src/main/kotlin/com/androidscript/host/protocol/: JsonRpcServer.kt
host-controller/src/main/resources/: logback.xml
host-runtime/: CMakeLists.txt
host-runtime/src/: command_executor.cpp  device_orchestrator.cpp  main.cpp  runtime.cpp
ios-agent/: README.md  build.sh
ios-agent/iOSAgent/: Info.plist  iOSAgentApp.swift
ios-agent/iOSAgent.xcodeproj/: project.pbxproj
ios-agent/iOSAgent/Bridge/: iOSNativeBridge.swift  iOSPlatformBridge.swift
ios-agent/iOSAgent/Runtime/: AST.swift  Interpreter.swift  Lexer.swift  Parser.swift  ScriptRunner.swift  Token.swift  Value.swift
ios-agent/iOSAgent/UI/: ContentView.swift  DeviceInfoView.swift  ExecutionView.swift  SettingsView.swift
web-dashboard/: README.md  index.html
web-dashboard/css/: style.css
web-dashboard/js/: api.js  app.js  ui.js
